--- a/index.html
+++ b/index.html
@@ -2,6 +2,7 @@
 <html lang="en" dir="ltr">
   <head>
     <link rel="stylesheet" href="style.css" />
+    <!-- Lien vers fichier CSS -->
     <meta charset="utf-8">
     <title>404 NOT FOUND</title>
   </head>
@@ -9,7 +10,9 @@
     <h1 class="center">ERROR !</h1>
     <p class="intro">The page your trying to reach is unaivalable at the moment.</p>
     <p class="center"><img src="404.gif" alt="404" height="500px" width="500px" /></p>
+    <!-- Gif 404 not found -->
     <p class="explain">If you want to reach the home page, click the button down below.</p>
     <div id="button"><button type="button" name="Retour" onclick="window.location.href = 'https://github.com/lionelfranco';">Retour</button></div>
+    <!-- Lien vers profile GitHub -->
   </body>
 </html>
